--- a/src/app/exemple.html
+++ b/src/app/exemple.html
@@ -3,8 +3,8 @@
   <mat-divider></mat-divider>
   <mat-list-item *ngFor="let message of messages">
     <mat-icon matListIcon>message</mat-icon>
-    <h3 matLine>{{message.emetteur}}</h3>
-    <p matLine>
+    <h3 matListItemTitle>{{message.emetteur}}</h3>
+    <p matListItemLine>
       <span> {{message.sujet}} </span>
       <span> -- {{message.contenu}} </span>
     </p>
